2019-07-11  Dmitriy Anisimkov  <anisimko@adacore.com>

	* libgnat/g-socket.ads (Mode_Type): Add a Socket_Raw enumerator.
	* libgnat/g-socket.adb (Modes): Handle Socket_Raw.

2019-07-11  Justin Squirek  <squirek@adacore.com>

	* exp_ch9.adb (Build_Private_Protected_Declaration): Add
	exception for the moving of pragmas to internally generated
	specs for pragma Unreferenced.

2019-07-11  Bob Duff  <duff@adacore.com>

	* doc/gnat_ugn/gnat_utility_programs.rst: Fix inconsistent
	documentation for gnatmetric.
	* gnat_ugn.texi: Regenerate.

2019-07-11  Bob Duff  <duff@adacore.com>

	* doc/gnat_ugn/gnat_utility_programs.rst: Document gnatpp's
	--spaces-only switch.

2019-07-11  Hristian Kirtchev  <kirtchev@adacore.com>

	* sem_util.adb (Null_Status): Assume that an erroneous construct
	has an undefined null status.

2019-07-11  Hristian Kirtchev  <kirtchev@adacore.com>

	* checks.adb, exp_ch6.adb, gnat1drv.adb, sem_aux.adb,
	sem_ch2.adb, sem_ch8.adb, sem_res.adb: Minor reformatting.

2019-07-11  Hristian Kirtchev  <kirtchev@adacore.com>

	* sem_ch8.adb (Analyze_Object_Renaming): Obtain the object being
	renamed using routine Get_Object_Name which takes care of
	various name forms.
	(Get_Object_Name): New routine.

2019-07-11  Ed Schonberg  <schonberg@adacore.com>

	* exp_ch6.adb (Can_Fold_Predicate_Call): New function,
	subsidiary of Expand_Call_Helper, to compute statically a
	predicate check when the argument is a static integer.

2019-07-11  Hristian Kirtchev  <kirtchev@adacore.com>

	* sem_res.adb (Resolve_Op_Not): Do not rewrite an equality
	operator into a function call when the operator is intrinsic.

2019-07-11  Thomas Quinot  <quinot@adacore.com>

	* sem_prag.adb (Analyze_Pragma, case pragma Check): Do not call
	Set_SCO_Pragma_Enabled for the dynamic predicate case.

2019-07-11  Hristian Kirtchev  <kirtchev@adacore.com>

	* exp_util.ads, exp_util.adb (Needs_Finalization): Move to
	Sem_Util.
	* sem_ch9.adb (Analyze_Protected_Definition): Code cleanup. Mark